syntax = "proto3";

option csharp_namespace = "DLS.ServiceNetwork.Protos";

package network;

import "google/protobuf/empty.proto";

service NetworkProto {
  rpc CheckNetwork (google.protobuf.Empty) returns (NetworkReply);
}

message NetworkRequest {
  string networkId = 1;
  string networkName = 2;
}

message NetworkReply {
  bool authorized = 1;
}
